# radreactions

./: .ctags  .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_SETUP.md  Dockerfile  FUTURE.md  INTERNET-DEPLOYMENT.md  README.md  VALIDATION_DATA_SOURCE.md  WARP.md  app.py  auth.py  auth_db.py  backup_db.py  backup_scheduler.py  check-setup.ps1  check_table9.py  config.py  csv_ai_corrector_first_10.py  db_utils.py  debug_volume.py  deploy.sh  difference_analysis.txt  docker-compose.yml  enhanced_chemistry_prompt.txt  fast_populate_db.py  import_first_10_reactions.py  import_reactions.py  main_app.py  pdf_preview.py  pdf_utils.py  pyproject.toml  railway.json  railway.toml  reactions.db-shm  reactions.db-wal  reactions_db.py  requirements.txt  shutdown_handler.py  (+8 more)
.github/workflows/: publish-ghcr.yml
.streamlit/: config.toml
app/: app.py  auth.py  auth_db.py  config.py  db_utils.py  import_reactions.py  main_app.py  pdf_utils.py  reactions_db.py  tsv_utils.py  validate_embedded.py
app/tools/: check_db.py  rebuild_db.py  recompute_canonical.py  reindex_fts.py  reset_db.py  wipe_db.py
latex/: temp_test.tex
ops/: DEPLOYMENT.md  Dockerfile  GITHUB-SETUP-INSTRUCTIONS.md  INTERNET-DEPLOYMENT.md  README.md  VALIDATION_DATA_SOURCE.md  aws-ecs-task.json  check-setup.ps1  deploy-gcp.sh  deploy-to-internet.ps1  deploy.ps1  docker-compose.override.yml  docker-compose.yml  prepare-full-data.ps1  prepare-sample-data.ps1  railway.json  setup-github.ps1  start.sh
pages/: 1_🔍_Validate.py  99_Admin_Page.py  99_Admin_Upload_Data.py  __init__.py  validate.py  validate_embedded.py
radreactions.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_canonicalization.py  test_fast_import.py  test_import_parsing.py  test_paths_and_search.py  test_pdf_utils.py  test_rebuild_db.py  test_tsv_utils.py
tools/: check_db.py  compare_csv_structure.py  csv2pdf.py  csv_ai_corrector.py  local_gpt5_corrector.py  rebuild_db.py  recompute_canonical.py  reindex_fts.py  reset_db.py  sync_validated.py  wipe_db.py
(+3557 files in other folders)
